force-app/main/default/objects/Dan360_ConfiguracionesGenerales__mdt/Dan360_ConfiguracionesGenerales__mdt.object-meta.xml
<CustomObject>
    <description>Metadata que contiene ID o configuraciones personalizadas que se requieren en alguna parte de los procesos para evitar hardcodeo.</description>
    <label>Configuraciones Generales</label>
    <pluralLabel>Configuraciones Generales</pluralLabel>
</CustomObject>