force-app/main/default/objects/Dan360_ConfiguracionesGenerales__mdt/fields/Dan360_IdComunidadGestoresPedidos__c.field-meta.xml
<CustomField>
    <fullName>Dan360_IdComunidadGestoresPedidos__c</fullName>
    <description>Contiene el ID de la comunidad Gestores de Pedidos.</description>
    <label>Id Comunidad Gestores de Pedidos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>