force-app/main/default/objects/Dan360_ConfiguracionesGenerales__mdt/fields/Dan360_PerfilesConfirmarPedidosMasivo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PerfilesConfirmarPedidosMasivo__c</fullName>
    <description>Campo para indicar que perfiles pueden confirmar pedidos de forma masiva</description>
    <label>Perfiles para confirmar pedidos Masivo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>