force-app/main/default/objects/Dan360_ConfiguracionesGenerales__mdt/fields/Dan360_PerfilesOMSComunidad__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PerfilesOMSComunidad__c</fullName>
    <label>Perfiles OMS Comunidad</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>