force-app/main/default/objects/Dan360_ConfiguracionesGenerales__mdt/fields/Dan360_PerfilesParaPedidosSinCargo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PerfilesParaPedidosSinCargo__c</fullName>
    <inlineHelpText>Ingrese los nombres de los perfiles que desea que pueda cargar pedidos sin cargo (separados por comas)</inlineHelpText>
    <label>Perfiles para pedidos sin cargo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>